--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "An opinionated wrapper around node-etcd.",
   "main": "index.js",
   "dependencies": {
-    "chai": "~1.9.0",
-    "jshint": "~2.4.4",
     "node-etcd": "~2.0.10",
     "q": "~1.0.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.1"
+    "mocha": "~1.17.1",
+    "chai": "~1.9.0",
+    "jshint": "~2.4.4"
   },
   "scripts": {
     "test": "mocha"
@@ -19,5 +19,6 @@
     "etcd"
   ],
   "author": "Mike Wagg <michael@guerillatactics.co.uk>",
-  "license": "ISC"
+  "license": "ISC",
+  "repository" : "https://github.com/mwagg/simple-etcd"
 }
