--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
-  - "0.8"
-  - "0.6"
+
+before_install:
+  - ./build_etcd v0.2.0
+
+script:
+  ./etcd/bin/etcd& npm test
+
+env: TRAVIS=true
